--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,16 @@
   background-color: gray ; 
   display:flex;
   
+  
 }
 
 .box{
   height: 100px;
   width: 100px;
   border:1px solid yellow;
+  box-sizing: border-box;
   color:#fff;
+  margin : 20px;
   
   
 }
@@ -17,7 +20,7 @@
 .box.blue{
   
   background-color: #00F;
-  margin-right: 20px;
+
   
 }
 
@@ -25,4 +28,10 @@
  
   
   background-color: #F00;
+}
+
+.box.green{
+ 
+  
+  background-color: green;
 }
